规范代码格式,适配Android Studio 3.0，增加更多微博的适配cpu对应的so文件

--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -2,21 +2,34 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
-        versionName "1.0"
+        versionName "1.1"
+    }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+    buildTypes {
+        debug {
+        }
+        release {
+        }
+        publish {
+        }
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:25.+'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:support-v4:25.4.0'
     //微博
-    compile 'com.sina.weibo.sdk:core:2.0.3:openDefaultRelease@aar'
+    api 'com.sina.weibo.sdk:core:4.1.4:openDefaultRelease@aar'
     //微信
-    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 }
