--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 16
@@ -29,7 +29,7 @@ dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:support-v4:25.4.0'
     //微博
-    api 'com.sina.weibo.sdk:core:4.1.4:openDefaultRelease@aar'
+    api 'com.sina.weibo.sdk:core:4.2.7:openDefaultRelease@aar'
     //微信
     api 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 }
